setup-scripts/OLD/63-vault/vault-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: vault
spec:
  ingressClassName: nginx
  tls:
    - secretName: vault-ssl
      hosts:
      - vault.k8s.feri.ai          
  rules:
  - host: "vault.k8s.feri.ai"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: vault
              port:
                number: 8200
